# gantt-flow

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  CLAUDE_MD_PROPOSAL.md  IMPROVEMENTS.md  README.md  RELEASE-NOTES.md  UX_BACKLOG.md  VISION.md  package-lock.json  package.json
.claude/: launch.json  settings.json
.claude/agents/: migration-safety-reviewer.md  reconcile-invariant-reviewer.md
.claude/hooks/: post-edit-check.mjs
.design-sync/: NOTES.md  config.json  conventions.md  entry.tsx
.design-sync/previews/: App.tsx  ChartBar.tsx  ChevronDown.tsx  Clock.tsx  Columns.tsx  CommandPalette.tsx  Download.tsx  Eye.tsx  EyeOff.tsx  FilePlus.tsx  Filter.tsx  FlowCanvas.tsx  FolderOpen.tsx  FullTable.tsx  Gear.tsx  HelpDialog.tsx  Image.tsx  Inspector.tsx  IssueListDialog.tsx  Keyboard.tsx  ListChecks.tsx  MapIcon.tsx  Maximize.tsx  Menu.tsx  MenuCheckItem.tsx  MenuItem.tsx  Modal.tsx  Moon.tsx  Printer.tsx  Redo.tsx  Save.tsx  Search.tsx  SettingsDialog.tsx  Sparkles.tsx  (+9 more)
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
design_reference/: BulkInput.jsx  FlowCompare.jsx  ScenarioSwitch.jsx  SummaryModalB.jsx  TobeInspector.jsx  bars.jsx  compare.css  data.js  index.html  procedure-mock.html
docs/: 00-overview.md  01-architecture.md  02-data-model.md  03-view-spec.md  04-sync-spec.md  05-persistence.md  06-roadmap.md  07-open-questions.md  08-testing.md  ui-ux-improvement-catalog.md  ui-ux-improvement-status.md
(+184 files in other folders)
