[package]
name = "gantt-flow"
version = "0.0.0"
edition = "2021"
description = "gantt-flow デスクトップ殻（Tauri 2）。保存/ロックは fsstore に委譲。"

[lib]
name = "gantt_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fsstore = { path = "../../../crates/fsstore" }
