[package]
name = "gantt-flow"
version = "0.0.0"
edition = "2021"
description = "gantt-flow デスクトップ殻（Tauri 2）。保存/ロックは fsstore に委譲。"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fsstore = { path = "../../../crates/fsstore" }
